fix: enhance scrollbar styling for better user experience

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -19,4 +19,16 @@
   button {
     -webkit-app-region: no-drag;
   }
+
+  ::-webkit-scrollbar {
+    @apply w-2;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply rounded bg-white/50 dark:bg-zinc-400/50;
+  }
 }
